# laser-embed

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  README.md  Template.uvguix.苏灬北  Template.uvoptx  convert.sh
APP/function/: function.c  function.h
APP/gps/: gps.c
APP/hwjs/: hwjs.c  hwjs.h
APP/module/: module.c  module.h
APP/time/: time.c
Libraries/CMSIS/: core_cm3.c
Public/: usart.c  usart.h
User/: main.c
